--- a/wrangler.toml
+++ b/wrangler.toml
@@ -15,15 +15,15 @@ TARGET_UPSTREAM = "https://registry-1.docker.io"
 
 [env.production]
 name = "cloudflare-docker-proxy"
-# routes = [
-#   { pattern = "docker.libcuda.so", custom_domain = true },
-#   { pattern = "quay.libcuda.so", custom_domain = true },
-#   { pattern = "gcr.libcuda.so", custom_domain = true },
-#   { pattern = "k8s-gcr.libcuda.so", custom_domain = true },
-#   { pattern = "k8s.libcuda.so", custom_domain = true },
-#   { pattern = "ghcr.libcuda.so", custom_domain = true },
-#   { pattern = "cloudsmith.libcuda.so", custom_domain = true },
-# ]
+ routes = [
+   { pattern = "docker.qqmaster.asia", custom_domain = true },
+   { pattern = "quay.qqmaster.asia", custom_domain = true },
+   { pattern = "gcr.qqmaster.asia", custom_domain = true },
+   { pattern = "k8s-gcr.qqmaster.asia", custom_domain = true },
+   { pattern = "k8s.qqmaster.asia", custom_domain = true },
+   { pattern = "ghcr.qqmaster.asia", custom_domain = true },
+   { pattern = "cloudsmith.qqmaster.asia", custom_domain = true },
+ ]
 
 [env.production.vars]
 MODE = "production"
